detailed tutorials added and platform tested

--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -60,7 +60,7 @@
         <div class="col-lg-6">
           <label>Name <span class="section-required" ng-hide="nameRequired">*</span>
             <span ng-show="nameRequired" class="input-required">Required</span></label>
-          <input class="form-control" type="text" ng-model="name" name="name" placeholder="ex. John Doe" required>
+          <input class="{{tutorial.pointer('submit') ? 'tutorial-input' : 'form-control'}}" type="text" ng-model="name" name="name" placeholder="ex. John Doe" required>
         </div>
         <div class="col-lg-6">
           <label>Email
@@ -127,7 +127,7 @@
   </div>
   <div class="modal-footer">
     <div class="alignright">
-      <button type="submit" ng-disabled="isSubmitButtonDisabled()" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button type="submit" ng-disabled="isSubmitButtonDisabled()" class="{{tutorial.pointer('submit') ? 'btn-tutorial-success' : 'btn-status-success'}}" ng-click="ok()">Submit</button>
       <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
   </div>
