--- a/src/views/dashboard.default.supply-chain.builder.html
+++ b/src/views/dashboard.default.supply-chain.builder.html
@@ -5,11 +5,11 @@
         <h2>Supply Chain Builder</h2>
         <div class="card-panel-options">
           <div class="col-lg-12 invisible-block">Invisible</div>
-          <button ng-click="addStage()" class="btn-status-success"><i class="fa fa-plus"></i> Add</button>
-          <button ng-click="editStage()" class="btn-status-default"><i class="fa fa-pencil"></i> Edit</button>
-          <button ng-click="linkStages()" class="btn-status-default"><i class="fa fa-link"></i> Link</button>
-          <button ng-click="unlinkStages()" class="btn-status-default"><i class="fa fa-link"></i> Unlink</button>
-          <button ng-click="deleteStage()" class="btn-status-danger"><i class="fa fa-trash"></i> Delete</button>
+          <button ng-click="addStage()" class="{{tutorial.pointer('add') ? 'btn-tutorial-success' : 'btn-status-success'}}"><i class="fa fa-plus"></i> Add</button>
+          <button ng-click="editStage()" class="{{tutorial.pointer('edit') ? 'btn-tutorial-default' : 'btn-status-default'}}"><i class="fa fa-pencil"></i> Edit</button>
+          <button ng-click="linkStages()" class="{{tutorial.pointer('link') ? 'btn-tutorial-default' : 'btn-status-default'}}"><i class="fa fa-link"></i> Link</button>
+          <button ng-click="unlinkStages()" class="{{tutorial.pointer('link') ? 'btn-tutorial-default' : 'btn-status-default'}}"><i class="fa fa-link"></i> Unlink</button>
+          <button ng-click="deleteStage()" class="{{tutorial.pointer('delete') ? 'btn-tutorial-danger' : 'btn-status-danger'}}"><i class="fa fa-trash"></i> Delete</button>
           <button ng-click="saveSupplyChain()" class="btn-status-success"><i class="fa fa-floppy-o"></i> Save</button>
         </div>
       </div>
@@ -30,7 +30,7 @@
       <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Name of Supply Chain Stage</label>
-          <input class="form-control" ng-model="name" placeholder="i.e. Processing Plant 1">
+          <input class="{{tutorial.pointer('add-modal') ? 'tutorial-input' : 'form-control'}}" ng-model="name" placeholder="i.e. Processing Plant 1">
           <small class="text-muted">Maximum 25 characters.</small>
         </div>
       </fieldset>
@@ -50,7 +50,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button ng-disabled="isSubmitButtonDisabled()" class="btn-status-success" type="button" ng-click="ok()">OK</button>
+    <button ng-disabled="isSubmitButtonDisabled()" class="{{tutorial.pointer('add-modal') ? 'btn-tutorial-success' : 'btn-status-success'}}" type="button" ng-click="ok()">OK</button>
     <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
   </div>
 </script>
