--- a/src/views/sign-up.html
+++ b/src/views/sign-up.html
@@ -44,6 +44,8 @@
                 <!-- Change this to a button or input when using this as a form -->
                 <center>
                   <br>
+                  <span>By clicking submit you agree to </span><a target="_blank" href="https://www.coastlinemarket.com/terms">these terms.</a>
+                  <br><br>
                   <button type="submit" class="btn-status-success">Submit</button>
                 </center>
                 <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
