--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -33,7 +33,7 @@
 <div ng-controller="NavTopCtrl" ng-show="tutorial.show()">
    <div id="tutorial-bar">
       <span id="tutorial-back" class="tutorial-button" ng-click="tutorial.back()">Previous Step</span>
-      <span>{{tutorial.state.dialog}}</span>
+      <span>{{"" + tutorial.state.dialog}}</span>
       <span id="tutorial-forward" class="tutorial-button" ng-click="tutorial.forward()">Next Step</span>
    </div>
 </div>
