--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -5,6 +5,7 @@
             <h2>Manage Orders</h2>
             <div class="card-panel-options">
                <div class="col-lg-12 invisible-block">&nbsp;</div>
+               <div ng-class="tutorial.action('add-orders', addOrder)"></div>
                <button ng-click="addOrder()" class="{{tutorial.pointer('add') ? 'btn-tutorial-success' : 'btn-status-success'}}"><i class="fa fa-plus"></i> Add</button>
                <button ng-click="editOrder()" class="{{tutorial.pointer('edit') ? 'btn-tutorial-default' : 'btn-status-default'}}"><i class="fa fa-search"></i> View/Edit</button>
                <button ng-hide="isLoadingPDF" ng-click="viewOrderDetail(selectedOrder)" class="{{tutorial.pointer('pdf') ? 'btn-tutorial-default' : 'btn-status-default'}}"><i class="fa fa-file-pdf-o"></i> PDF</button>
@@ -109,6 +110,7 @@
    <div class="modal-header">
       <h3 class="modal-title">Add Invoice</h3>
       <div class="card-panel-options">
+         <div ng-class="tutorial.action('choose-customer', loadCustomer)"></div>
          <a class="{{tutorial.pointer('profiles') ? 'btn-tutorial-default' : 'btn-status-default'}}" ng-href="javascript:void(0)" type="button" ng-click="loadCustomer()">Use Existing Customer</a>
       </div>
    </div>
