login link changes

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -34,7 +34,7 @@
 
                 <div class="form-group">
                   <center>
-                    <label>Don't have an account? <a href="https://www.coastlinemarket.com/#contact">Request an account</a> today!</label>
+                    <label>Don't have an account? <a href="http://dashboard.coastlinemarket.com/#/sign-up-trial">Request an account</a> today!</label>
                   </center>
                 </div>
 
