fixed notes not showing up on the invoice viewer when added manually

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -179,11 +179,11 @@
             </tr>
             <tr>
               <td><span>Delivery Tax Rate: </span></td>
-              <td>{{order.deliveryTaxRate || "Not Specified"}}</td>
+              <td>{{order.deliveryChargeTaxRate || "Not Specified"}}</td>
             </tr>
             <tr>
               <td><span>Species Note: </span></td>
-              <td>{{order.note || "Not Specified"}}</td>
+              <td>{{order.notes || "Not Specified"}}</td>
             </tr>
           </tbody>
         </table>
