--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -77,7 +77,7 @@
         <div class="col-lg-6">
           <label>Phone <span class="section-required" ng-hide="phoneRequired">*</span>
             <span ng-show="phoneRequired" class="input-required">Required</span></label>
-          <input class="form-control" type="text" ng-model="phone" name="phone" maxlength="10" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789395555" required>
+          <input class="form-control" type="text" ng-model="phone" name="phone" placeholder="ex. 7789395555" required>
         </div>
       </fieldset>
 
@@ -95,7 +95,7 @@
         <div class="col-lg-2">
           <label>Zip Code <span class="section-required" ng-hide="postalCodeRequired">*</span>
             <span ng-show="postalCodeRequired" class="input-required">Required</span></label>
-          <input class="form-control" name="postalCode"  ng-model="postalCode" type="text" maxlength="6" placeholder="ex. V3N1V4" required>
+          <input class="form-control" name="postalCode"  ng-model="postalCode" type="text" placeholder="ex. V3N1V4" required>
         </div>
         <div class="col-lg-2">
           <label>State/Province <span class="section-required" ng-hide="stateRequired">*</span>
