--- a/src/views/modals/order-filter.html
+++ b/src/views/modals/order-filter.html
@@ -11,11 +11,11 @@
             <input class="form-control" type="text" ng-model="customerName" placeholder="ex. John Doe">
             <small class="text-muted">[Optional] Maximum 30 characters</small>
           </div>
-          <div class="col-lg-6">
+<!--           <div class="col-lg-6">
             <label>Invoice Number</label>
             <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
             <small class="text-muted">[Optional] Order Invoice </small>
-          </div>
+          </div> -->
         </fieldset>
         <fieldset class="form-group">
           <div class="col-lg-6">
